# OPENCV-1-iris

OpenCV/: 2camera  CMakeLists.txt  Makefile  cam  camera  camera.cpp  camera2.cpp  camera_detection.cpp  codetes.cpp  detect_blue_camera  video.cpp
OpenCV/VIDEO TUGAS 1/: VID1 OPENCV.mkv
